--- a/css/App.css
+++ b/css/App.css
@@ -44,4 +44,15 @@ body {
   width: 50px;
   height: 100%;
   cursor: pointer;
+}
+
+.todo {
+  background-color: darkkhaki;
+  height: 40px;
+  padding: 0 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }/*# sourceMappingURL=App.css.map */
