--- a/css/App.scss
+++ b/css/App.scss
@@ -45,3 +45,13 @@ body {
       cursor: pointer;
     }
   }
+.todo {
+  background-color: darkkhaki;
+  height: 40px;
+  padding: 0 10px;
+  margin-top: 10px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
