--- a/css/App.scss
+++ b/css/App.scss
@@ -55,3 +55,7 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+.completed{
+  opacity: 0.4;
+  text-decoration: line-through 3px black;
+}
